--- a/ckanext/ckanpackager/theme/templates/ckanpackager/snippets/package_resource.html
+++ b/ckanext/ckanpackager/theme/templates/ckanpackager/snippets/package_resource.html
@@ -7,7 +7,7 @@
 
 {% resource 'ckanext-ckanpackager/main' %}
 
-<a data-module="ckanpackager-download-link" class="packager-link btn btn-primary resource-url-analytics resource-type-{{ res.resource_type }}"
+<a data-module="ckanpackager-download-link" class="packager-link btn btn-primary"
    href="{{ h.url_for_package_resource(pkg.id, res.id) }}">
   <i class="{{ bt_class }}"></i> {{ bt_text }}
 </a>
