Allow users to select this page only/all records when downloading from a grid view page

--- a/ckanext/ckanpackager/theme/public/css/ckanpackager.css
+++ b/ckanext/ckanpackager/theme/public/css/ckanpackager.css
@@ -19,6 +19,26 @@ div.ckanpackager-form input {
     width: 95%;
 }
 
+div.ckanpackager-form div.options {
+    text-align: left;
+    vertical-align: middle;
+}
+
+div.ckanpackager-form div.options label {
+    vertical-align:middle;
+    font-weight: normal;
+    display: inline-block;
+}
+
+div.ckanpackager-form div.options label:after {
+    content: "";
+}
+
+div.ckanpackager-form div.options input {
+    width: auto;
+    position: initial;
+}
+
 a.packager-link {
     display: block;
 }
