Allow choice of tsv or csv download format
This only applies to datastore resources and defaults to csv.

--- a/ckanext/ckanpackager/theme/public/css/ckanpackager.css
+++ b/ckanext/ckanpackager/theme/public/css/ckanpackager.css
@@ -22,12 +22,14 @@ div.ckanpackager-form input {
 div.ckanpackager-form div.options {
     text-align: left;
     vertical-align: middle;
+    padding-bottom: 0;
 }
 
 div.ckanpackager-form div.options label {
     vertical-align:middle;
     font-weight: normal;
     display: inline-block;
+    margin-left: 8px;
 }
 
 div.ckanpackager-form div.options label:after {
