--- a/ckanext/ckanpackager/theme/templates/ajax_snippets/ckanpackager_form.html
+++ b/ckanext/ckanpackager/theme/templates/ajax_snippets/ckanpackager_form.html
@@ -7,11 +7,20 @@
             <input class="ckanpackager-email" type="text" name="email" placeholder="{{ _('Please enter your email address') }}" value="" />
         {% endif %}
 
-        <div class="options">
-            {{ _('Download') }}:
+        <div class="options limits">
+            {{ _('Download') }}:<br />
             <label for="page"><input id="page" type="radio" name="content" value="page" checked="checked"/> {{ _('this page only') }}</label>
-            <label for="all"><input id="all" type="radio" name="content" value="all"/> {{ _('all') }} <span id="ckanpackager_total_records">?</span> {{ _('records') }}</label>
+            <label for="all"><input id="all" type="radio" name="content" value="all"/> {{ _('all') }} <span id="ckanpackager_total_records">?</span> {{ _('records') }}</label><br />
         </div>
+        {% if h.should_show_format_options(resource_id) %}
+        <div class="options">
+            <form>
+                {{ _('Format') }}:<br />
+                <label for="{{ resource_id }}-csv"><input id="{{ resource_id }}-csv" type="radio" name="format" value="csv" checked="checked"/> {{ _('CSV') }}</label>
+                <label for="{{ resource_id }}-tsv"><input id="{{ resource_id }}-tsv" type="radio" name="format" value="tsv"/> {{ _('TSV') }}</label><br />
+            </form>
+        </div>
+        {% endif %}
         {% block action_buttons %}
             <a class="ckanpackager-send btn btn-primary" href="#">{{ _('Send') }}</a>
             <a class="ckanpackager-cancel btn btn-warning" href="#">{{ _('Cancel') }}</a>
