Account for the record download links
Download links either download records or resources, this extra
module parameter allows us to show appropriate text depending on
what is being downloaded. A corresponding change in ckanext-nhm
is required to pass `is_record=true` through.

--- a/ckanext/ckanpackager/theme/templates/ckanpackager/snippets/package_resource.html
+++ b/ckanext/ckanpackager/theme/templates/ckanpackager/snippets/package_resource.html
@@ -8,6 +8,6 @@
 {% resource 'ckanext-ckanpackager/main' %}
 
 <a data-module="ckanpackager-download-link" class="packager-link btn btn-primary" data-module-resource-id="{{ res.id }}"
-   href="{{ h.url_for_package_resource(pkg.id, res.id) }}">
+   data-module-is-record="false" href="{{ h.url_for_package_resource(pkg.id, res.id) }}">
   <i class="{{ bt_class }}"></i> {{ bt_text }}
 </a>
