--- a/ckanext/ckanpackager/theme/templates/ajax_snippets/ckanpackager_form.html
+++ b/ckanext/ckanpackager/theme/templates/ajax_snippets/ckanpackager_form.html
@@ -1,9 +1,17 @@
 <div>
     <div class="ckanpackager-form">
         {% if c.userobj %}
-            <p>{{ _('The resource will be extracted, with current filters applied, and an email will be sent to your registered address shortly.') }}</p>
+            {% if is_record == 'true' %}
+                <p>{{ _('The record will be packaged and sent to the email address registered with your account.') }}</p>
+            {% else %}
+                <p>{{ _('The resource will be extracted, with current filters applied, and an email will be sent to your registered address shortly.') }}</p>
+            {% endif %}
         {% else %}
-            <p>{{ _('The resource will be extracted, with current filters applied, and an email will be sent to the given address shortly.') }}</p>
+            {% if is_record == 'true' %}
+                <p>{{ _('Please enter your email address below, and the record will be packaged and sent to you.') }}</p>
+            {% else %}
+                <p>{{ _('The resource will be extracted, with current filters applied, and an email will be sent to the given address shortly.') }}</p>
+            {% endif %}
             <input class="ckanpackager-email" type="text" name="email" placeholder="{{ _('Please enter your email address') }}" value="" />
         {% endif %}
 
