[wcag] Use proper form, fieldset and legend for download form

--- a/ckanext/ckanpackager/theme/public/css/ckanpackager.css
+++ b/ckanext/ckanpackager/theme/public/css/ckanpackager.css
@@ -57,3 +57,7 @@ a.packager-link.packager-link-active:hover {
 .actions li {
     vertical-align: top;
 }
+
+.ckanpackager-form-legend {
+    font-size: 14px;
+}
