Change how email addresses are processed and refactor
Prior to this change, if a user was logged in when using the UI
to make a download request they had no choice but to use the
email address associated with their user (the email input box was
not shown at all and the backend code looks for the email on the
user object).

Now the email input is always shown and is defaulted to the user's
email address if they are logged in. When the requests is received
by the backend it looks for the email input before it checks for a
logged in user.

Also, there's some refactoring in this commit with the removal of
some code and simplification of other bits (like using requests
instead of urllib).

--- a/ckanext/ckanpackager/theme/templates/ajax_snippets/ckanpackager_form.html
+++ b/ckanext/ckanpackager/theme/templates/ajax_snippets/ckanpackager_form.html
@@ -3,26 +3,17 @@
         <form>
             <fieldset>
                 <legend class="ckanpackager-form-legend">
-                {% if c.userobj %}
-                    {% if is_record == 'true' %}
-                        <p>{{ _('The record will be packaged and sent to the email address registered with your account.') }}</p>
-                    {% else %}
-                        <p>{{ _('The resource will be extracted, with current filters applied, and an email will be sent to your registered address shortly.') }}</p>
-                    {% endif %}
+                {% if is_record == 'true' %}
+                {{ _('Please enter your email address below, and the record will be packaged and sent to you.') }}
                 {% else %}
-                    {% if is_record == 'true' %}
-                        <p>{{ _('Please enter your email address below, and the record will be packaged and sent to you.') }}</p>
-                    {% else %}
-                        <p>{{ _('The resource will be extracted, with current filters applied, and an email will be sent to the given address shortly.') }}</p>
-                    {% endif %}
+                {{ _('The resource will be extracted, with current filters applied, and an email will be sent to the given address shortly.') }}
                 {% endif %}
                 </legend>
 
-                {% if not c.userobj %}
                 <input class="ckanpackager-email" type="text" name="email"
                        placeholder="{{ _('Please enter your email address') }}"
-                       aria-label="{{ _('Please enter your email address') }}" value="" />
-                {% endif %}
+                       aria-label="{{ _('Please enter your email address') }}"
+                       value="{{ c.userobj.email }}" />
 
                 <div class="options limits">
                     {{ _('Download') }}:<br />
