style: reformat with prettier

--- a/ckanext/ckanpackager/theme/assets/less/ckanpackager.less
+++ b/ckanext/ckanpackager/theme/assets/less/ckanpackager.less
@@ -1,5 +1,5 @@
 div.ckanpackager-form {
-  background: #EBEBEB;
+  background: #ebebeb;
   padding: 4px;
 
   & a.btn {
@@ -24,7 +24,7 @@ div.ckanpackager-form {
   }
 
   & div.options label:after {
-    content: "";
+    content: '';
   }
 
   & div.options input {
@@ -46,7 +46,7 @@ a.packager-link {
 
   &.packager-link-active,
   &.packager-link-active:hover {
-    background-color: #EBEBEB;
+    background-color: #ebebeb;
     color: #000;
     cursor: default;
     display: block;
